# OpenDuo

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  SUPERPROMPT.md
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
crates/openduo-agent/: Cargo.toml
crates/openduo-agent/src/: gitlab_provider.rs  graphql_provider.rs  lib.rs  prompt.rs  provider.rs  react_loop.rs
crates/openduo-agent/tests/: gitlab_provider_test.rs  prompt_test.rs  provider_test.rs  react_loop_test.rs
crates/openduo-core/: Cargo.toml
crates/openduo-core/src/: auth.rs  config.rs  gitlab_client.rs  lib.rs
crates/openduo-core/tests/: config_test.rs  gitlab_client_test.rs
crates/openduo-server/: Cargo.toml
crates/openduo-server/src/: main.rs  routes.rs  sse.rs  validation.rs
crates/openduo-tools/: Cargo.toml
crates/openduo-tools/src/: cicd.rs  issues.rs  labels.rs  lib.rs  merge_requests.rs  milestones.rs  pipelines.rs  projects.rs  registry.rs  repositories.rs  users.rs
crates/openduo-tools/tests/: registry_test.rs
docs/plans/: 2026-02-24-openduo-design.md  2026-02-24-openduo-implementation.md
extension/: .vscodeignore  LICENSE  esbuild.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json  vitest.config.ts
extension/__mocks__/: vscode.ts
extension/src/: chatPanel.ts  extension.ts  logger.ts  patManager.test.ts  patManager.ts  server.test.ts  server.ts
extension/webview/: index.html  index.tsx  vscode.ts
extension/webview/components/: ChatApp.tsx  ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  StatusBar.tsx
extension/webview/hooks/: useChat.test.ts  useChat.ts
