[workspace]
members = [
    "crates/openduo-core",
    "crates/openduo-agent",
    "crates/openduo-tools",
    "crates/openduo-server",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
