[package]
name = "openduo-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openduo-server"
path = "src/main.rs"

[dependencies]
openduo-core = { path = "../openduo-core" }
openduo-agent = { path = "../openduo-agent" }
openduo-tools = { path = "../openduo-tools" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
